# cmd_cachier

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Config.toml  Makefile  README.md  cmd_cachier_server.sh  default.nix  docs.shell.nix  shell.nix
.github/workflows/: build_docs.yml  pages.yml  publish_docs.yml  static.yml  static.yml.bak  test-nix.yml
crate/: Cargo.toml  deny.toml
crate/src/: main.rs
crate/src/help/: mod.rs
docs/: README.adoc.templ  cmd_cachier.1.adoc  cmd_cachier.1.adoc.auto  cmd_cachier.1.html
docs/0.2.7/man/man1/: cmd_cachier.1
docs/manpages/: cmd_cachier.1.adoc.templ
docs/manpages/0.2.7/: README.md
docs/public/: cmd_cachier.1.html
man/: cmd_cachier.1
man/man1/: cmd_cachier.1
nix/: default.nix  default.nix.templ  shell.nix
nix-build/: default.nix
nix/shells/build-docs/: shell.nix
public/: docs.txt  index.md
scripts/: adoc_to_md.sh  clean.sh  dep_check.sh  devshell.sh  prep_docs.py  prep_release.py  untempl.py
src/: main.rs
templates/: templ_cmd_cachier.1.adoc  templ_default.nix  templ_readme.adoc
