[package]
name = "cmd_cachier"
authors = ["Matthew Mitchell"]
version = "0.3.0"
edition = "2021"
license = "MIT"
repository = "https://gitlab.com/inyourfoss/cmd_cachier"
documentation = "https://gitlab.com/inyourfoss/docs/cmd_cachier.1.pdf"
homepage = "https://gitlab.com/inyourfoss/cmd_cachier"
readme = "README.md"
description = "A caching service for your cli commands using redis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
colored = "=2.0"
redis = "0.23"
